# kilowatt

./: .gitignore  LICENSE.txt  Makefile  README.md  flatpak.yaml  pyproject.toml
data/share/applications/: io.github.dlippok.kilowatt.desktop
data/share/metainfo/: io.github.dlippok.kilowatt.metainfo.xml
data/translations/de/: io.github.dlippok.kilowatt.po
src/kilowatt/: data.py  main.py
src/kilowatt/model/: metering.py
src/kilowatt/resources/: style.css
src/kilowatt/resources/ui/: example_button.blp  main_window.blp  meter_button.blp  meter_page.blp  meters_box.blp  start_page.blp
src/kilowatt/resources/ui/compiled/: example_button.ui  main_window.ui  meter_button.ui  meter_page.ui  meters_box.ui  start_page.ui
src/kilowatt/util/: locales.py  ui.py
src/kilowatt/view/: example_button.py  meter_button.py  meter_page.py  meters_box.py  start_page.py
