[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kilowatt"
version = "0.1.0"

[project.scripts]
kilowatt = "kilowatt.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kilowatt = [
    "resources/ui/compiled/*.ui"
]